added CSSTransitionGroup to animate reassignment of books to different shelves

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,24 @@ body, .app {
   font-size: 0;
 }
 
+.example-enter {
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
+
 /* search page */
 
 .search-books-bar {
@@ -120,6 +138,9 @@ body, .app {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+.books-grid span {
+  display: flex;
 }
 .books-grid li {
   padding: 10px 15px;
