--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,8 @@ body, .app {
   border-bottom: 1px solid #dedede;
   font-family: 'Fjalla One', sans-serif;
   font-size: 1.5em;
+  color: #595959;
+  -webkit-font-smoothing: antialiased;
 }
 .bookshelf-books {
   text-align: center;
@@ -80,20 +82,20 @@ body, .app {
 
 
 
-.example-enter {
+.shelf-move-enter {
   opacity: 0.01;
 }
 
-.example-enter.example-enter-active {
+.shelf-move-enter.shelf-move-enter-active {
   opacity: 1;
   transition: opacity 500ms ease-in;
 }
 
-.example-leave {
+.shelf-move-leave {
   opacity: 1;
 }
 
-.example-leave.example-leave-active {
+.shelf-move-leave.shelf-move-leave-active {
   opacity: 0.01;
   transition: opacity 300ms ease-in;
 }
@@ -132,6 +134,11 @@ body, .app {
 .search-results-stats h3 {
   font-family: 'Fjalla One', sans-serif;
   font-size: 1.75em;
+  color: #2196F3;
+}
+
+.books-search-tally {
+  color: #EC407A;
 }
 
 .close-search {
@@ -212,6 +219,7 @@ body, .app {
   background-size: 20px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+
 .book-shelf-changer select {
   width: 100%;
   height: 100%;
@@ -246,6 +254,7 @@ body, .app {
 
 .book-overlay:hover {
   opacity: 0.8;
+  cursor: pointer;
 }
 
 .get-more-info {
@@ -263,6 +272,10 @@ body, .app {
   font-weight: lighter;
   padding: 10px;
   border-radius: 25px;
+}
+
+.ReactModal__Overlay {
+  background-color: rgba(0, 0, 0, 0.75) !important;
 }
 
 .base-modal {
@@ -284,6 +297,10 @@ body, .app {
 
 .modal-flex-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 15px;
+  border-bottom: 1px solid #dedede;
 }
 
 .modal-book-cover {
@@ -295,6 +312,7 @@ body, .app {
   flex-grow: 1;
   margin: 20px 10px 0 0;
   padding: 10px;
+  text-align: center;
 }
 
 .modal-header {
@@ -302,6 +320,7 @@ body, .app {
   margin: 5px 0px;
   text-transform: uppercase;
   font-family: 'Fjalla One', sans-serif;
+  color: #2196F3;
 }
 
 .modal-detail {
@@ -315,6 +334,7 @@ body, .app {
   margin: 5px 20px;
   text-transform: uppercase;
   font-family: 'Fjalla One', sans-serif;
+  color: #2196F3;
 }
 
 .modal-book-detail {
