--- a/src/App.css
+++ b/src/App.css
@@ -350,7 +350,7 @@ body, .app {
 }
 
 .close-modal-button {
-  margin-bottom: 15px;
+  margin: 0 15px 15px 0;
   padding: 10px 25px;
   border: 1px solid #2196f3;
   border-radius: 20px;
